<resources>
    <string name="app_name">rudu</string>
    <string name="label_splash_bottom">Making your drive a memorable one\nSafe  Coming Home</string>
    <string name="splash_desc">Realtime \nOnboard \nAssessment of \nDriving behaviour</string>
    <string name="label_getverified">Get Verified</string>
    <string name="label_but_join">JOIN</string>
    <string name="label_hint_name">Name</string>
    <string name="label_hint_country">Country</string>
    <string name="label_hint_continent">Continent</string>
    <string name="label_hint_email_opt">Email (Optional)</string>
    <string name="label_but_submit">SUBMIT</string>
    <string name="label_verify_code">Verification code will be sent to this number</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="label_about">About</string>
    <string name="label_terms_conditions">Terms &amp; Conditions</string>
    <string name="label_get_start">GET START</string>
    <string name="label_welcome_start">Welcome to Road app, please fill up this below details to serve you better</string>
    <string name="label_thanks">Thanks and Enjoy the great experience!</string>
    <string name="label_personal_info">Personal Information</string>
    <string name="label_app_setting">App Settings</string>
    <string name="label_hint_age">Age</string>
    <string name="label_hint_emer_mobile">Emergency Contact Number</string>
    <string name="label_hint_lic_date">Driving license issue Date</string>
    <string name="label_app_notif">App notifications</string>
    <string name="label_start_bg">Starting on Background</string>
    <string name="label_speed_beep">Speed Limit Beep</string>
    <string name="label_beep">Beep</string>
    <string name="label_bluetooth">Bluetooth</string>
    <string name="label_voice_alert">Voice Alert</string>
    <string name="label_co_pilot_mode">Co-Pilot Mode</string>
    <string name="label_Save">Save &#38; Start</string>
    <string name="label_Save_gn">Save</string>
    <string name="loading_bluetooth_title">Bluetooth Connecting .....</string>
    <string name="global_dash">Global Dashboard</string>
    <string name="label_drive_score">Safe Driving Score</string>
    <string name="label_drive_tip">Driving Tips</string>
    <string name="tv_driving_tip">Actively pay attention to your actions and those of the drivers around you when you are driving</string>
    <string name="drivingtip_two">Familiarize yourself with the controls and release the handbrake before you start rolling</string>
    <string name="drivingtip_three">Find the best seating position for you and adjust the mirrors</string>
    <string name="drivingtip_four">Check the surroundings while reverse parking your car</string>
    <string name="drivingtip_five">Use turn signals and check mirrors before splitting lanes</string>
    <string name="drivingtip_six">Slow down before turning and maintain a consistent speed throughout the turn</string>
    <string name="tv_driving_score">Last 3 Driving Score</string>
    <string name="tv_date">15/04/2021</string>
    <string name="km"><font color='#9F9F9F'>KM</font></string>
    <string name="am"><font color='#9F9F9F'>AM</font></string>
    <string name="tv_mins">100:33</string>
    <string name="tv_time">10:09</string>
    <string name="tv_dist"> 04:22</string>
    <string name="tv_score">Driving Score</string>
    <string name="tv_ride">Rides</string>
    <string name="tv_dashboard">Dashboard</string>
    <string name="tv_more">More</string>
    <string name="label_my_rides">My Rides</string>
    <string name="label_report">Report a Problem</string>
    <string name="label_settings">Settings</string>
    <string name="label_gen_settings">General Settings</string>
    <string name="label_car_settings">Car Settings</string>
    <string name="label_app_sett">App Settings</string>
    <string name="label_Rides">07 MAY 2021</string>
    <string name="tv_risk_chart">Trip Risk Chart</string>
    <string name="label_alert">Risk Alert Context</string>
    <string name="label_alert_map">Risk Alert - Map View</string>
    <string name="label_alert_list">Risk Alerts</string>
    <string name="title_trip">Trip</string>
    <string name="title_alert">Alert</string>
    <string name="title_time">Time <br /><font size="10">(HH:MM)</font></string>
    <string name="title_distance">Distance  <br /><font size="10">(KM)</font></string>
    <string name="title_speed">Speed\n<font size="10">(KM/H)</font></string>
    <string name="title_zip">Zipcode</string>
    <string name="title_sl_ps">SL/PS\n<font size="10">(KM/H)</font></string>
    <string name="label_installing_map">INSTALLING MAP</string>
    <string name="label_choose">Please select your continent and country</string>
    <string name="label_experience_map">We are setting up local map on the app for \n your seemless experience</string>
    <string name="label_map_view_experience">We are setting up local map on the app for \n your seemless experience</string>
    <string name="label_please_wait">Please wait for a while...</string>
    <string name="valid_email_address">Enter Valid Email Address</string>
    <string name="valid_phno">Enter Valid Mobile Number</string>
    <string name="valid_emgcont">Enter Valid Emergency Number</string>
    <string name="valid_password">Enter Valid Password</string>
    <string name="valid_password_len">Password Must Have Minimum 8 Characters</string>
    <string name="valid_date">Enter Date</string>
    <string name="enter_mob_pwd">Enter Your Mobile Number And Password  </string>
    <string name="enter_phn">Enter Your Mobile Number</string>
    <string name="conf_pwd">Enter Your Confirm Password</string>
    <string name="new_pwd">Enter Your New Password</string>
    <string name="val_conf_pwd">Enter Valid Confirm Password</string>
    <string name="val_new_pwd">Enter Valid New Password</string>
    <string name="enter_pwd">Enter Your Password</string>
    <string name="valid_phn_pass">Enter Valid Mobile Number And Password</string>
    <string name="valid_Age_empty">Age Is Empty</string>
    <string name="title_anticip">Anticipation</string>
    <string name="desc_anticip">Anticipation capability of driver (speed)</string>
    <string name="title_Self_Conf">Self Confidence</string>
    <string name="desc_self_conf">Listening to alerts</string>
    <string name="title_driving_skill">Driving Skill</string>
    <string name="desc_driving_skill">Repeatability of same driving risk</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="select_country">Select Country</string>
    <string name="agree_terms">Please Agree Terms &amp; Service</string>
    <string name="fill_personal">Please Fill And Save Personal Information</string>
    <string name="search_format">DD/MM/YYYY</string>
    <string name="hint_map_country">Country</string>
    <string name="txt_forgot_new_password_title">New Password</string>
    <string name="txt_forgot_con_password_title">Confirm Password</string>
    <string name="btn_setPassword">Reset Password</string>
    <string name="pass_not_match">Password Does Not Match</string>
    <string name="setting_update">Settings Updated</string>
    <string name="action_clear_codes">Clear Codes</string>
    <string name="notification_action">Tap to open OBD-Reader</string>
    <string name="service_starting">Starting OBD connection..</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="title_activity_trouble_codes">Trouble Codes</string>
    <string name="pref_upload_category_title">Data Upload</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="title_activity_trips_list">TripsList</string>
    <string name="menu_trip_list">Trips</string>
    <string name="menu_item_trip_delete">Delete</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="dialog_loading_title">Loading…</string>
    <string name="dialog_loading_body">Loading application View, please wait…</string>
    <string name="menu_start_live_data">Start Live Data</string>
    <string name="menu_stop_live_data">Stop Live Data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_get_dtc">Get DTC</string>
    <string name="text_gps" translatable="false">GPS</string>
    <string name="text_obd" translatable="false">OBD</string>
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="title_pref_commands">OBD Commands</string>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="text_no_bluetooth_id">Sorry, your device doesn\'t support Bluetooth</string>
    <string name="text_bluetooth_disabled">You have Bluetooth disabled. Please enable it (using Mock service)</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="text_bluetooth_error_connecting">Cannot connect to bluetooth device!</string>
    <string name="text_no_orientation_sensor">Orientation sensor missing?</string>
    <string name="text_no_gps_support">Sorry, your device doesn\'t support or has disabled GPS.</string>
    <string name="text_save_trip_not_available">Sorry, trip will not be saved.</string>
    <string name="text_obd_command_failure">OBD command failure!</string>
    <string name="text_dtc_no_data">No DTC stored</string>
    <string name="status_bluetooth_disabled">disabled</string>
    <string name="status_bluetooth_ok">ready</string>
    <string name="status_bluetooth_connecting">connecting&#8230;</string>
    <string name="status_bluetooth_connected">connected</string>
    <string name="status_bluetooth_error_connecting">connection failed</string>
    <string name="status_gps_fix">fix acquired</string>
    <string name="status_gps_started">started</string>
    <string name="status_gps_stopped">stopped</string>
    <string name="status_gps_ready">ready</string>
    <string name="status_gps_no_support">not available</string>
    <string name="status_gps_not_used">not used</string>
    <string name="status_obd_data">receiving data&#8230;</string>
    <string name="status_obd_disconnected">disconnected</string>
    <string name="status_obd_no_support">NA</string>
    <string name="pref_upload_title">Enable Data Upload</string>
    <string name="pref_upload_summaryOff">Enable http data upload</string>
    <string name="pref_upload_summaryOn">Disable http data upload</string>
    <string name="pref_upload_url_title">Upload URL</string>
    <string name="pref_upload_url_summary">POST URL that will accept real-time data</string>
    <string name="pref_vehicle_id_title">Vehicle ID</string>
    <string name="pref_vehicle_id_summary">Optional unique id of this vehicle, used with uploaded data</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="txt_Mobile_Number">Mobile Number</string>
    <string name="txt_forg">Forgot Password?\nLet us reset it now!</string>
    <string name="txt_for_btn_1">Send Code</string>
    <string name="txt_rem_pass_login">Remember Password?</string>
    <string name="txt_login">Login</string>
</resources>