<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rudu_bg_v2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/logo_layout"
                android:layout_width="200dp"
                android:layout_height="90sp"
                android:gravity="center"
                android:src="@drawable/rudu_logo_no_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/txt_forg"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                android:id="@+id/text__reg"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_etForgotMob"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="1sp"
                app:endIconDrawable="@drawable/close_image"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:hintTextColor="@color/white"
                app:boxStrokeWidthFocused="1dp"
                app:boxBackgroundMode="filled"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etForgotMob"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/mob_ic"
                    android:hint="@string/txt_Mobile_Number"
                    android:imeOptions="flagNoExtractUi"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text=""
                    android:fontFamily="@font/segoe_ui"
                    android:drawablePadding="8dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:gravity="center|left|bottom"
                    />


            </com.google.android.material.textfield.TextInputLayout>




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSendOTP"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_round_button"
                    android:clickable="true"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/txt_for_btn_1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/txt_rem_pass_login"
                        android:textColor="#8B8B8B"
                        android:textSize="15dp"></TextView>


                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/txt_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/txt_login"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:textStyle="normal"></TextView>


                </LinearLayout>


            </LinearLayout>

            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>