<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RoadAboutPageActivity">

    <include layout="@layout/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/header_layout"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        >


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/abt_header_layout"
            tools:ignore="MissingConstraints">
            <TextView
                android:id="@+id/install_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/label_installing_map"
                android:textColor="@color/color_title"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/abt_img_road_safety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/label_experience_map"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingRight="50dp"
                android:paddingTop="20dp"
                android:layout_marginLeft="30dp"
                android:gravity="left"
                app:layout_constraintTop_toBottomOf="@+id/install_title"
                android:fontFamily="@font/segoe_ui"
                ></TextView>

            <TextView
                android:id="@+id/tv_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/abt_img_road_safety"
                android:textSize="16dp"
                android:text="@string/label_choose"
                android:textColor="@color/color_title"
                android:layout_marginLeft="30dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui"

                ></TextView>

            <TextView
                style="@style/TextStyle.Heading"
                android:id="@+id/textview_continent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible"
                android:layout_marginLeft="20dp"
                android:text="@string/label_hint_continent"
                android:textStyle="normal"
                android:textColor="@color/light_gray"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="25dp"
                tools:ignore="MissingConstraints" />


            <Spinner
                android:id="@+id/spinner_continent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:minHeight="48dp"
                android:fontFamily="@font/segoe_ui"
                android:background="@drawable/spinner_continent_draw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_continent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="20dp"
                android:textSize="14dp"
                android:paddingStart="35dp"
                android:paddingTop="5dp"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="50dp"

                />



           <!-- <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_continent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spinlanguage"
                app:ms_arrowColor="@android:color/darker_gray"
                app:ms_arrowSize="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:ms_multiline="true"
                android:visibility="gone"
                />-->

            <TextView
                android:id="@+id/textview_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spinner_continent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible"
                android:text="@string/label_hint_country"
                android:textStyle="normal"
                android:textColor="@color/light_gray"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints"
                android:fontFamily="@font/segoe_ui"
                android:layout_marginLeft="20dp"


                />

         <!--   <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textview_country"
                app:ms_arrowColor="@android:color/darker_gray"
                app:ms_arrowSize="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:ms_multiline="true"
                android:visibility="gone"
                />-->


            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:minHeight="48dp"
                android:fontFamily="@font/segoe_ui"
                android:background="@drawable/spinner_country_draw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_country"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="20dp"
                android:textSize="14dp"
                android:paddingStart="35dp"
                android:paddingTop="5dp"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="50dp"

                />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/label_but_submit"
                android:visibility="visible"
                android:layout_marginLeft="30dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_country"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:textAllCaps="true"
                android:textSize="15dp"
                android:background="@drawable/bg_round_button"
                android:textColor="@color/white"
                android:id="@+id/btnRoadMapSubmit"
                android:fontFamily="@font/segoe_ui"
                ></androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>