<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RoadInstalingMapViewPageActivity">


    <include layout="@layout/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/header_layout"
        />









    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:isScrollContainer="true"
                app:layout_constraintTop_toBottomOf="@+id/abt_header_layout">

                <TextView
                    android:id="@+id/install_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/label_installing_map"
                    android:textColor="@color/color_title"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/abt_img_road_safety"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:paddingTop="5dp"
                    android:paddingRight="50dp"
                    android:text="@string/label_map_view_experience"
                    android:textColor="@color/color_title"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/install_title"

                    ></TextView>

                <TextView
                    android:id="@+id/tv_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/label_please_wait"
                    android:textColor="@color/color_title"
                    android:textSize="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/abt_img_road_safety"></TextView>

                <TextView
                    android:id="@+id/tv_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:text="0 %"
                    android:textColor="@android:color/black"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/map_view"></TextView>

                <ImageView
                    android:id="@+id/map_view"
                    android:layout_width="185dp"
                    android:layout_height="185dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/download_ic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_choose"

                    ></ImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>